force-app/main/default/objects/NPN_Bulk_Contact_Request__c/NPN_Bulk_Contact_Request__c.object-meta.xml
<CustomObject>
    <description>The object stores the bulk contact requests raised by partner users through Manage Contacts tab on partner portal.</description>
    <label>NPN Bulk Contact Request</label>
    <nameField>
        <displayFormat>BCR-{00000}</displayFormat>
        <label>NPN Bulk Contact Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPN Bulk Contact Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>