force-app/main/default/objects/NPN_Bulk_Contact_Request__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPN Bulk Contact Requests</relationshipLabel>
    <relationshipName>NPN_Bulk_Contact_Request</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>