force-app/main/default/objects/NPN_Bulk_Contact_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NPN_Bulk_Contact_Request</relationshipName>
    <type>Lookup</type>
</CustomField>